osp/static/css/community-base.css
@import url("/static/css/color.css");
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css");

#community-container {
    margin-top: 59px;
}

#community-sidebar {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

#profile-tab {
    background: var(--main-point-color);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

#profile-image-wrap {
    width: fit-content;
}

#profile-image {
    box-sizing: border-box;
    margin-left: auto;
    margin-right: auto;
    margin-top: -40px;
    padding: 0;

    z-index: 5;
    width: 160px;
    height: 160px;
    border-radius: 50%;
    border: 2px solid var(--main-point-color);
}

#profile-sum {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px 10px 30px;
    gap: 10px;
    background: var(--main-point-color);
    color: #FFFFFF;
}

#profile-username{
    font-family: 'Roboto' !important;
    font-style: normal;
    font-weight: 400;
    font-size: 25px;
    text-align: center;
}

#community-tab{
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    margin-bottom:20px;
}

#community-stat div{
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    text-align: center;
    text-decoration-line: underline;
}

.boardgroup{
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border: none;
}

.boardgroup-title{
    padding: 0.5rem;
    font-size: 15px !important;
    background-color: var(--main-bg-color);
    text-align: left;
}

.boardgroup-item{
    padding: 0.5rem;
    text-align: center;
    font-style: normal;
    font-weight: 400;
    font-size: 15px !important;

    background: #FFFFFF;
    border-top: 1px solid #9D9D9D;
}

#team-create{
    cursor: pointer;
    color: var(--main-icon-color);
    height: 1.5em;
    width: 1.5em;
    text-align: center;
}

.article-head{
    margin-top : auto;
    margin-bottom: auto;
}

.article-meta{
    margin-left: auto;
    text-align: end;
    font-size: 14px;
}

.article-meta-stat{
    margin-left: 0.25em;
    margin-right: 0.25em;
    text-align: end;
    color:#2F2F2F;
}

.accordion-item, .accordion-button{
    border: none;
    border-radius: 0 !important;
}

.accordion-button:focus{
    box-shadow: none;
}

.accordion-button:not(.collapsed){
    background-color: var(--main-point-color) !important;
    color: #FFFFFF;
}

.accordion-button::after{
    font-family: bootstrap-icons;
    background-image: none;
    width: fit-content;
    content: "\F229";
}

.accordion-button:not(.collapsed):after{
    background-image: none;
}
#team-tab{
    background-color: var(--main-point-color) !important;
    color:white;
    padding:25px;
    margin-bottom:10px;

}
#team-tab > div:first-child  {
    margin:5px;
    height:160px;
    width:160px;
    padding:4px;
    background:white;
    border: 1px solid #9D9D9D;
    border-radius:10px;
}
#team-tab > div:first-child > img{
    height:100%;
    width:100%;
    border: 1px solid #9D9D9D;
    border-radius:10px;
}

#team-tab > #team-members{
    margin-left:15px;
    border-right: 1px solid white;
}
#team-tab > #team-members > div:first-child{
    font-weight:500;
    font-size:28px;
    margin-bottom:5px;
}

#team-tab > #team-members > div:nth-child(2){
    font-weight:400;
    font-size:18px;
    margin-bottom:5px;
}

#team-info{
    padding-left:10px;
    min-width:150px;
    overflow-x:scroll;
}

#team-info > #team-desc{
    margin-top:25px;
}

#team-member{
    font-weight:400;
    font-size:15px;
    margin-bottom:4px;
    padding-right:4px;
    text-decoration: underline;
    color:white;
}

#board-title-bar{
    background: var(--main-point-color) !important;
    padding: 20px 10px 10px 30px;
    color:white;
}

.article-bar{
    min-height: 79px;
    border-bottom: 0.03rem solid var(--main-border-color);
    background:white;
}

.article-bar-title{
    display:inline-block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.article-bar.empty{
    display: flex;
}

.article-bar-writer{
    color:#0094FF;
    text-decoration:underline;
}

.color-b{
    color:#2F2F2F;
}

